Use CDI field injection for http layer