@@ -58,6 +58,7 @@ test {
     inputs.property("moduleName", moduleName)
     doFirst {
         jvmArgs += [
+            '--add-opens', "$moduleName/$moduleName=hk2.utils",
             '--add-opens', "$moduleName/org.trellisldp.http.impl=org.junit.platform.commons",
             '--add-opens', "$moduleName/org.trellisldp.http.impl=org.mockito",
             '--add-opens', "java.base/java.net=jersey.client",
